Bug 334950 - bogus assertion when no viewbox specified for marker. r=tor,sr=roc